Fix z-index on options menu

--- a/src/sup/webplain/torrus.css
+++ b/src/sup/webplain/torrus.css
@@ -323,6 +323,7 @@ UL.OptionsMenu {
   padding: 1em;
   padding-top: 0.8em;
   border: dashed 1px #999;
+  z-index: 100;
 }
 
 UL.OptionsMenu LI UL {
